[gd_scene load_steps=5 format=3 uid="uid://bnc5vqjarvlwt"]

[ext_resource type="PackedScene" uid="uid://d1bdiyr8xuvcd" path="res://Assets/Characters/kenney_mini-arena/Models/GLB format/character-soldier.glb" id="1_debt7"]
[ext_resource type="Script" path="res://Scenes/player2script.gd" id="1_vvi3c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_is7qr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ct65v"]
radius = 0.226218
height = 1.42966

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.223138, 0)
collision_layer = 8
collision_mask = 25
script = ExtResource("1_vvi3c")

[node name="Pivot" type="Node3D" parent="."]

[node name="character-soldier2" parent="Pivot" instance=ExtResource("1_debt7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Hand" type="Marker3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19594, 0.01818)

[node name="Interaction1" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -2, -5)
collision_mask = 49167

[node name="Interaction2" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -1, -5)
collision_mask = 5

[node name="Interaction3" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -1.5, -5)
collision_mask = 5

[node name="Interaction4" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -3, -5)
collision_mask = 5

[node name="Interaction5" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -5, -5)
collision_mask = 5

[node name="Interaction6" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -10, -5)
collision_mask = 5

[node name="AntiRotationJoint" type="Generic6DOFJoint3D" parent="Pivot"]
unique_name_in_owner = true
visible = false
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.119, 0.018)

[node name="PickUpArea" type="Area3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.539164, -0.573187)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/PickUpArea"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, -0.21699, 0)
shape = SubResource("BoxShape3D_is7qr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.589486, 0, 0, 0, 1, 0, 0.306835, 0)
shape = SubResource("CapsuleShape3D_ct65v")

[connection signal="body_entered" from="Pivot/PickUpArea" to="." method="_on_area_3d_body_entered"]
